--- a/HtmlTemplate/Buying.html
+++ b/HtmlTemplate/Buying.html
@@ -33,7 +33,7 @@
                             <img src="/assets/images/logo.png" />
                         </a>
                         <div class="mobileTopMenu">
-                            <a href="#"><i class="icon-m icon-phone2"></i></a>
+                            <a href="javascript:;"><i class="icon-m icon-phone2"></i></a>
                             <a href="javascript:;" class="showMobileMenu"><i class="icon-m icon-menu"></i></a>
                         </div>
                         <div class="collapse navbar-collapse topMenu" id="navbarSupportedContent">
@@ -46,7 +46,7 @@
                                     <a class="nav-link" href="/"><i class="fa fa-home"></i>HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>ABOUT US</a>
+                                    <a class="nav-link" href="javascript:;"><i class="fa fa-users"></i>ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/contact.html"><i class="fa fa-globe"></i>CONTACT</a>
@@ -66,12 +66,12 @@
                 <div class="container">
                     <div class="bottomHeader">
                         <div class="nav nav-pills nav-fill menu2">
-                            <a href="#" class="nav-item nav-link">CAMPAIGN TICKETS</a>
-                            <a href="#" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">THY FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ARTICLES</a>
+                            <a href="javascript:;" class="nav-item nav-link">CAMPAIGN TICKETS</a>
+                            <a href="javascript:;" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">THY FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -83,14 +83,14 @@
                     <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span></span>
                 </div>
                 <ul class="vertical">
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -310,49 +310,49 @@
                     <div class="col-md-3">
                         <p class="title">Airline Companies</p>
                         <ul class="vertical">
-                            <li><a href="#">Pegasus</a></li>
-                            <li><a href="#">Turkish Airlines</a></li>
-                            <li><a href="#">Anadolujet</a></li>
-                            <li><a href="#">Atlasjet</a></li>
-                            <li><a href="#">Borajet</a></li>
+                            <li><a href="javascript:;">Pegasus</a></li>
+                            <li><a href="javascript:;">Turkish Airlines</a></li>
+                            <li><a href="javascript:;">Anadolujet</a></li>
+                            <li><a href="javascript:;">Atlasjet</a></li>
+                            <li><a href="javascript:;">Borajet</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">About Our Company</p>
                         <ul class="vertical">
-                            <li><a href="#">about Us</a></li>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">About Purchase</a></li>
-                            <li><a href="#">User Agreement</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="javascript:;">about Us</a></li>
+                            <li><a href="javascript:;">Our services</a></li>
+                            <li><a href="javascript:;">About Purchase</a></li>
+                            <li><a href="javascript:;">User Agreement</a></li>
+                            <li><a href="javascript:;">Contact us</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">Popular Cities</p>
                         <ul class="vertical city">
-                            <li><a href="#">İstanbul</a></li>
-                            <li><a href="#">Antalya</a></li>
-                            <li><a href="#">Ankara</a></li>
-                            <li><a href="#">Eskişehir</a></li>
-                            <li><a href="#">İzmir</a></li>
-                            <li><a href="#">Çanakkale</a></li>
-                            <li><a href="#">Barcelona</a></li>
-                            <li><a href="#">Madrid</a></li>
-                            <li><a href="#">Paris</a></li>
-                            <li><a href="#">California</a></li>
+                            <li><a href="javascript:;">İstanbul</a></li>
+                            <li><a href="javascript:;">Antalya</a></li>
+                            <li><a href="javascript:;">Ankara</a></li>
+                            <li><a href="javascript:;">Eskişehir</a></li>
+                            <li><a href="javascript:;">İzmir</a></li>
+                            <li><a href="javascript:;">Çanakkale</a></li>
+                            <li><a href="javascript:;">Barcelona</a></li>
+                            <li><a href="javascript:;">Madrid</a></li>
+                            <li><a href="javascript:;">Paris</a></li>
+                            <li><a href="javascript:;">California</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
                         <p class="title">Help &amp; Support</p>
                         <ul class="vertical">
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Confidentiality Agreement</a></li>
-                            <li><a href="#">After Sales Services</a></li>
-                            <li><a href="#">Service Agreement</a></li>
-                            <li><a href="#">Cancellation &amp; Refund Conditions</a></li>
+                            <li><a href="javascript:;">Terms of use</a></li>
+                            <li><a href="javascript:;">Confidentiality Agreement</a></li>
+                            <li><a href="javascript:;">After Sales Services</a></li>
+                            <li><a href="javascript:;">Service Agreement</a></li>
+                            <li><a href="javascript:;">Cancellation &amp; Refund Conditions</a></li>
                         </ul>
                         <hr />
                     </div>
@@ -360,7 +360,7 @@
             </div>
             <div class="clear">&nbsp;</div>
             <div class="footerBottom">
-                <a href="#" class="footerArrow">
+                <a href="javascript:;" class="footerArrow">
                     <span class="icon icon-longarrow"></span>
                 </a>
                 <div class="container">
@@ -372,11 +372,11 @@
                         <div class="col-md-6">
                             <div class="pull-right m-l-30">
                                 <ul class="horizontal social pull-right">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                    <li><a href="javascript:;"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pull-right line hMobile">&nbsp;</div>
