--- a/HtmlTemplate/_master.html
+++ b/HtmlTemplate/_master.html
@@ -33,7 +33,7 @@
                             <img src="/assets/images/logo.png" />
                         </a>
                         <div class="mobileTopMenu">
-                            <a href="#"><i class="icon-m icon-phone2"></i></a>
+                            <a href="javascript:;"><i class="icon-m icon-phone2"></i></a>
                             <a href="javascript:;" class="showMobileMenu"><i class="icon-m icon-menu"></i></a>
                         </div>
                         <div class="collapse navbar-collapse topMenu" id="navbarSupportedContent">
@@ -46,7 +46,7 @@
                                     <a class="nav-link" href="/"><i class="fa fa-home"></i>HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>ABOUT US</a>
+                                    <a class="nav-link" href="javascript:;"><i class="fa fa-users"></i>ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/contact.html"><i class="fa fa-globe"></i>CONTACT</a>
@@ -66,12 +66,12 @@
                 <div class="container">
                     <div class="bottomHeader">
                         <div class="nav nav-pills nav-fill menu2">
-                            <a href="#" class="nav-item nav-link">CAMPAIGN TICKETS</a>
-                            <a href="#" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">THY FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
-                            <a href="#" class="nav-item nav-link">ARTICLES</a>
+                            <a href="javascript:;" class="nav-item nav-link">CAMPAIGN TICKETS</a>
+                            <a href="javascript:;" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">THY FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
+                            <a href="javascript:;" class="nav-item nav-link">ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -83,14 +83,14 @@
                     <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span></span>
                 </div>
                 <ul class="vertical">
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
+                    <li><a href="javascript:;"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
                 </ul>
             </div>
         </div>
